[package]
name = "anvil"
version = "0.1.0"
edition = "2021"
description = "A type-safe Rust shell and REPL"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/anvil"
readme = "README.md"
keywords = ["shell", "repl", "rust", "cli", "type-safe"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "anvil"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
reedline = "0.28"
nu-ansi-term = "0.49"
crossterm = "0.27"
dirs = "5.0"
log = "0.4"
env_logger = "0.10"
regex = "1.10"
syn = { version = "2.0", features = ["full", "parsing", "printing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
tempfile = "3.8"
which = "4.4"
shellexpand = "3.1"
rusty_v8 = { version = "0.32.1", optional = true }
toml = "0.5"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tempdir = "0.3"

[features]
default = ["repl"]
repl = []
v8-eval = ["rusty_v8"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"