[package]
name = "anvil"
version = "0.1.0"
edition = "2021"
description = "A type-safe Rust shell and REPL"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/anvil"
readme = "README.md"
keywords = ["shell", "repl", "rust", "cli", "type-safe"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "anvil"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
clap = { version = "4.5.39", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
thiserror = "2.0.12"
reedline = "0.40.0"
nu-ansi-term = "0.50.1"
crossterm = "0.29.0"
dirs = "6.0.0"
log = "0.4.27"
env_logger = "0.11.8"
regex = "1.11.1"
syn = { version = "2.0.101", features = ["full", "parsing", "printing", "extra-traits"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"
tempfile = "3.20.0"
which = "7.0.3"
shellexpand = "3.1.1"
rusty_v8 = { version = "0.32.1", optional = true }
toml = "0.8.22"

[dev-dependencies]
criterion = "0.6.0"
proptest = "1.6.0"
tempdir = "0.3.7"

[features]
default = ["repl"]
repl = []
v8-eval = ["rusty_v8"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"